# unissh

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  compose.prod.yml  compose.yml  deny.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  client.yml  docs.yml  publish-images.yml
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  dto.rs  error.rs  keychain.rs  lib.rs  main.rs  observers.rs  state.rs
client/src/bridge/: api.ts  clipboard.ts  log.ts  platform.ts  secretKey.ts  sources.ts  sync-hook.ts  types.ts  vaults.ts
client/src/components/: ContextMenu.tsx  Modal.tsx  ReconnectBanner.tsx  a11y.ts  mono.tsx  primitives.tsx
client/src/i18n/: format.ts  i18next.d.ts  index.ts
client/src/mobile/: MobileApp.tsx
client/src/overlays/: CommandPalette.tsx  Entry.tsx  Feedback.tsx  GroupsModal.tsx  ImportPreview.tsx  Modals.tsx
client/src/sftp/: paths.ts  transfer-engine.ts  transfer-runner.ts
client/src/shell/: Shell.tsx  useTerminalShortcuts.ts
client/src/store/: action.ts  app.ts  ctx.ts  responsive.ts  sftp-types.ts  toast.ts
client/src/theme/: ThemeProvider.tsx  theme.css  tokens.ts
client/src/views/: TermTabStrip.tsx  ViewBroadcast.tsx  ViewFleet.tsx  ViewHosts.tsx  ViewKnown.tsx  ViewSecrets.tsx  ViewSettings.tsx  ViewTerminal.tsx  ViewTunnels.tsx
deploy/: .env.example  .env.localhost  Caddy.Dockerfile  Caddy.Dockerfile.dockerignore  Caddyfile  README.md  prometheus.yml
rust-core/: README.md
rust-core/crates/cli/: Cargo.toml
rust-core/crates/cli/src/: main.rs
rust-core/crates/crypto/: Cargo.toml  README.md
rust-core/crates/ffi/: Cargo.toml  README.md
rust-core/crates/keychain/: Cargo.toml  README.md
rust-core/crates/ssh-agent/: Cargo.toml  README.md
rust-core/crates/ssh-transport/: Cargo.toml  README.md
rust-core/crates/storage/: Cargo.toml  README.md
rust-core/crates/storage/src/: error.rs  lib.rs  records.rs  schema.rs  store.rs
rust-core/crates/storage/tests/: storage.rs
rust-core/crates/sync/: Cargo.toml  README.md
rust-core/crates/sync/src/: engine.rs  error.rs  lib.rs  object.rs  transport.rs
rust-core/crates/sync/tests/: adversarial_p6.rs  sync.rs
rust-core/crates/vault/: Cargo.toml  README.md
rust-core/crates/vault/src/: error.rs  lib.rs  membership.rs  vault.rs  vault_id.rs
rust-core/crates/vault/tests/: key_epoch.rs  membership.rs  rotation.rs  vault.rs
scripts/: check-log-redaction.py  ios-fix-xcodeproj.sh
server/: .dockerignore  .gitignore  CLIENT.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  config.example.toml  docker-compose.yml
server-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server-ui/crypto-wasm/: Cargo.toml
server-ui/crypto-wasm/src/: lib.rs
server-ui/src/: App.tsx  main.tsx
server-ui/src/access/: BootstrapModal.tsx  InviteModal.tsx  KeysetModal.tsx  MintGrantModal.tsx  OpsLogin.tsx
server-ui/src/api/: auth-service.ts  client.ts  errors.ts  index.ts  tenant-switch.ts  types.ts
server-ui/src/crypto/: provider.ts  wasm-provider.ts
server-ui/src/i18n/: index.ts
server-ui/src/screens/: Accounts.tsx  Audit.tsx  Config.tsx  Devices.tsx  Enroll.tsx  Grants.tsx  Health.tsx  Invites.tsx  Maintenance.tsx  Metrics.tsx  Objects.tsx  Overview.tsx  Placeholder.tsx  Relay.tsx  Screen.tsx  Sessions.tsx  Tenants.tsx  Vaults.tsx  meta.ts  registry.tsx
server-ui/src/shell/: SettingsPanel.tsx  Shell.tsx  Sidebar.tsx  Titlebar.tsx  nav.ts
server-ui/src/store/: meta.ts  prefs.ts  session.ts  tenant.ts  ui.ts
server/docs/: audit-entry-blob-format.md
server/src/: codec.rs  config.rs  crypto.rs  error.rs  ids.rs  lib.rs  main.rs  obs.rs  state.rs  time.rs
server/src/domain/: mod.rs  (+3 more)
server/tests/: accounts.rs  admin_ops.rs  admin_ui_handoff.rs  codec_parity.rs  crypto_parity.rs  enroll_grants.rs  hardening.rs  identity_http.rs  ops.rs  oracle_sync.rs  pg_integration.rs  policy_audit.rs  record_sig.rs  seq_bump.rs  store_sync.rs  sync_http.rs  zk_e2e.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
(+154 files in other folders)
