# Standalone workspace: not part of the root workspace (cdylib/wasm32 + its own release profile).
[workspace]

[package]
name = "unissh-crypto-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen surface over unissh-crypto for the admin panel (keyset unlock, challenge signing, registration). Storage-free — does NOT pull keychain/vault (sqlcipher)."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pure-compute crypto foundation (wasm-clean: dalek/chacha/hpke/argon2/sha2/hkdf).
unissh-crypto = { path = "../../rust-core/crates/crypto" }
wasm-bindgen = "0.2"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
# Browser CSPRNG for OsRng on wasm32 (feature-unifies the whole dep tree).
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
