[package]
name = "unissh-cli"
version = "0.1.0"
description = "Temporary UniSSH CLI harness: poke at the core from a terminal (create a local vault → SSH key → connect)."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "unissh"
path = "src/main.rs"

[dependencies]
unissh-ffi = { path = "../ffi" }
clap = { version = "4", features = ["derive"] }
