[package]
name = "unissh-vault"
version = "0.1.0"
description = "Локальные волты UniSSH: Vault Key, per-item ключи, шифрование items с associated-data привязкой (ТЗ 5.2–5.3, локальная часть)."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
unissh-crypto = { path = "../crypto" }
unissh-keychain = { path = "../keychain" }
unissh-storage = { path = "../storage" }
zeroize = "1.8"
thiserror = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
unissh-keychain = { path = "../keychain" }
unissh-crypto = { path = "../crypto" }
